--- a/journal/applying LIME to bullet data journal.Rmd
+++ b/journal/applying LIME to bullet data journal.Rmd
@@ -769,7 +769,7 @@ chosen_features <- hamby224_test_explain %>%
 
 In order to access consistency, I have decided to compute Fleiss' kappa for each of the bin types. Fleiss' kappa is often used to assess the consistency across raters for any number of raters and with nominal ratings. It calculates the degree of agreement in classification over that which would be expected by chance. A description of how it is computed can be found on the wikipedia site: https://en.wikipedia.org/wiki/Fleiss%27_kappa
 
-I computed kappa for each bin situation separately for the top three features chosen. These values are plotted below for each set. For both the first and second features chosen by lime, the values of kappa suggest that quantile bins are the most consistent across all the nubmer of bins followed by the tree based bins. The values of kappa for the quantile bins are slight to fair agreement. For the third chosen variable, the tree based bins have the highest value of kappa, but all the kappa values for the third chosen feature are low.
+I computed kappa for each bin situation separately for the top three features chosen. These values are plotted below for each set. For both the first and second features chosen by lime, the values of kappa suggest that quantile bins are the most consistent across all the number of bins followed by the tree based bins. The values of kappa for the quantile bins are slight to fair agreement. For the third chosen variable, the tree based bins have the highest value of kappa, but all the kappa values for the third chosen feature are low.
 
 ```{r}
 # Computes and plots the values of kappa
@@ -923,12 +923,14 @@ if(!file.exists("../data/hamby224_sensitivity_inputs.rds")) {
 }
 ```
 
-```{r eval = FALSE}
-hamby224_sensitivity <- hamby224_sensitivity_outputs %>%
+```{r}
+# Join the sensativity outputs with the test data
+hamby224_sensitivity_joined <- hamby224_sensitivity_outputs %>%
   full_join(hamby224_test %>% na.omit() %>% 
                 mutate(case = as.character(case)), by = "case") %>%
     mutate(case = factor(case)) %>%
-    select(case, model_r2:feature_weight, bin_continuous:rep, set:land2, rfscore, samesource) %>%
+    select(case, model_r2:feature_weight, bin_continuous:rep, 
+           set:land2, rfscore, samesource) %>%
     mutate(diff = rfscore - model_prediction,
          nbins = as.numeric(as.character(nbins)),
          situation = ifelse(bin_continuous == TRUE & bin_method == "quantile_bins", 
@@ -971,44 +973,56 @@ hamby224_sensitivity <- hamby224_sensitivity_outputs %>%
                                                        "kernel density", 
                                                        "normal approximation")))))) %>%
     mutate(bin_situation = factor(bin_situation))
+```
 
+```{r}
 # Code for organizing the sensitivity analysis results
-hamby224_sensitivity_results <- hamby224_sensitivity %>%
+hamby224_sensitivity_results <- hamby224_sensitivity_joined %>%
   group_by(set, rep, situation, bin_situation, nbins) %>%
   summarise(mse = sum((diff)^2) / length(diff),
             ave_r2 = mean(model_r2))
 ```
 
-The plot below shows boxplots of the 10 mean squared errors computed for each of the input situations for each set. There does not appear to be much variation for most of the cases. The largest amount of variation occurs with 4 and 5 equally spaced bins. There is moderate variability for 3 equally spaced bins, but all of the 10 runs resulted in much lower mses than any of the other situations. This still seems to support the choice of using 3 equally spaced quantile bins for both sets.
+The plot below shows boxplots of the mean squared errors computed for each of the input situations for each set. There does not appear to be much variation for most of the cases. The largest amount of variation occurs with 4 and 5 equally spaced bins. There is moderate variability for 3 equally spaced bins. The lowest MSEs occur for the samesource tree based bins followed by the rfscore tree based bins for most cases.
 
-```{r eval = FALSE}
+```{r}
 # Plots the MSEs from the sensativity analysis
 hamby224_sensitivity_results %>%
-  mutate(bins = ifelse(nbins == 4 & bin_situation == "other", "other", as.character(nbins))) %>%
-  ggplot(aes(x = situation, y = mse)) + 
+  mutate(bins = ifelse(bin_situation %in% c("kernel density", "normal approximation"),
+                       "other", as.character(nbins))) %>%
+  ggplot(aes(x = bin_situation, y = mse)) + 
   geom_boxplot(aes(color = bin_situation)) +
-  facet_grid(set ~ bins, scales = "free_x") + 
+  facet_grid(set ~ bins, scales = "free_x", space = "free_x") + 
   theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") + 
-  labs(x = "Situation", y = "MSE", color = "") + 
-  scale_color_brewer(palette = "RdYlBu")
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
+  labs(x = "Bin Type", y = "MSE", color = "") + 
+  scale_color_gretchenalbrecht(palette = "winged_spill", discrete = TRUE)
 ```
 
-```{r eval = FALSE}
+The plot blow shows boxplots of the average $R^2$ values from the 10 models for all input options and for each set. There is minimal variability in the average $R^2$ value for all cases, and the relationships between $R^2$ values and input cases agree with the single implementation seen below.
+
+```{r}
 # Plots the average R^2 value from the sensativity analysis 
-hamby224_sensitivity_mses %>%
-  mutate(bins = ifelse(nbins == 4 & bin_situation == "other", "other", as.character(nbins))) %>%
-  ggplot(aes(x = situation, y = ave_r2)) + 
+hamby224_sensitivity_results %>%
+  mutate(bins = ifelse(bin_situation %in% c("kernel density", "normal approximation"),
+                       "other", as.character(nbins))) %>%
+  ggplot(aes(x = bin_situation, y = ave_r2)) + 
   geom_boxplot(aes(color = bin_situation)) +
-  facet_grid(set ~ bins, scales = "free_x") + 
+  facet_grid(set ~ bins, scales = "free_x", space = "free_x") + 
   theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") + 
-  labs(x = "Situation", y = "MSE", color = "") + 
-  scale_color_brewer(palette = "RdYlBu")
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") +
+  labs(x = "Bin Type", y = "MSE", color = "") + 
+  scale_color_gretchenalbrecht(palette = "winged_spill", discrete = TRUE)
 ```
 
-```{r eval = FALSE}
-hamby224_consistency <- hamby224_sensitivity_results %>%
+To assess the consistency of the results, I determined the number of different features chosen by LIME as the top feature within a test case across the 10 replicates. I then computed the average number of different top features chosen by LIME within a input situations for each set. The plot below contains these values shown as the dots. The error bars represent one standard deviation above and below the mean. Note that the number of levels cannot go below 1, but the error bars go below 1. I have decided to ignore this for now, but I would need to come up with a better representation if I used this for something.
+
+There are a handful of situations with a mean near one and very little variation. However, the largest mean is around 2, which is not very high. This seems to suggest that LIME is relatively consistent across runs.
+
+```{r}
+# Determine and plot the average and variability of the number levels for each case 
+# and input option
+hamby224_consistency <- hamby224_sensitivity_joined %>%
   select(set, situation, bin_situation, nbins, case, rep, feature, feature_weight) %>%
   mutate(feature_weight_abs = abs(feature_weight)) %>%
   arrange(set, situation, case, rep, desc(feature_weight_abs)) %>%
@@ -1025,92 +1039,61 @@ hamby224_consistency <- hamby224_sensitivity_results %>%
             upper = mean(nlevels) + sd(nlevels),
             lower = mean(nlevels) - sd(nlevels),
             max = max(nlevels),
-            min = min(nlevels))
-```
+            min = min(nlevels)) %>%
+  mutate(bins = ifelse(bin_situation %in% c("kernel density", "normal approximation"), 
+                       "other", as.character(nbins)))
 
-To assess the consistency of the results, I determined the number of different features chosen by LIME as the top feature within a test case across the 10 replicates. I then computed the average number of different top features chosen by LIME within a input situations for each set. The plot below contains these values shown as the dots. The error bars represent one standard deviation above and below the mean. Note that the number of levels cannot go below 1, but the error bars go below 1. I have decided to ignore this for now, but I would need to come up with a better representation if I used this for something.
-
-There are a handful of situations with a mean near one and very little variation. However, the largest mean is around 2, which is not very high. This seems to suggest that LIME is relatively consistent across runs.
-
-```{r eval = FALSE}
 hamby224_consistency %>%
-  mutate(bins = ifelse(nbins == 4 & bin_situation == "other", "other", as.character(nbins))) %>%
   ggplot(aes(x = situation, y = mean_nlevels)) + 
   geom_errorbar(aes(ymin = lower, ymax = upper), color = "grey80") +
   geom_point(aes(color = bin_situation)) + 
-  facet_grid(set ~ bins, scales = "free_x") + 
-  labs(x = "Situation", y = "Mean Number of Features", color = "") +
+  facet_grid(set ~ bins, scales = "free_x", space = "free_x") + 
+  labs(x = "Bin Type", y = "Mean Number of Features", color = "") +
   theme_bw() +
   theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") + 
-  scale_color_brewer(palette = "RdYlBu")
+  scale_color_gretchenalbrecht(palette = "winged_spill", discrete = TRUE)
 ```
 
-The bar chart below shows the proportion of different number of top features chosen across all test cases within a set for each input situation. This shows that the most different features chosen was four. However, many of the cases only have one or two different features chosen, and usually, a larger proportion of the cases have only one top feature chosen across the 10 reps.
+The bar chart below shows the proportion of different number of first, second, and third features chosen across all test cases within a set for each input situation. This shows that the most different features chosen was seven. However, many of the cases only have one or two different features chosen, and usually, a larger proportion of the cases have only one top feature chosen across the 10 reps.
 
-```{r eval = FALSE}
-hamby224_sensitivity_results %>%
+```{r}
+# Determine the order that the features are chosen within a case and 
+# set of input options
+sensitivity_chosen <- hamby224_sensitivity_joined %>%
   select(set, situation, case, rep, feature, feature_weight) %>%
   mutate(feature_weight_abs = abs(feature_weight)) %>%
   arrange(set, situation, case, rep, desc(feature_weight_abs)) %>%
-  group_by(set, situation, case, rep) %>%
-  slice(1) %>%
-  ungroup() %>%
-  group_by(set, situation, case) %>%
-  summarise(nlevels = length(levels(factor(feature)))) %>%
-  mutate(nlevels = factor(nlevels, levels = c(1:5))) %>%
-  ggplot(aes(x = situation, fill = nlevels)) + 
-  geom_bar(position = "stack") +
-  facet_grid( ~ set) + 
-  theme(legend.position = "bottom", 
-        axis.text.x = element_text(angle = 45, hjust = 1)) + 
-  scale_fill_brewer(palette = "RdYlBu") + 
-  labs(x = "Situation", y = "Count", fill = "Number of Features")
-
-hamby224_sensitivity_results %>%
-  select(set, situation, case, rep, feature, feature_weight) %>%
-  mutate(feature_weight_abs = abs(feature_weight)) %>%
-  arrange(set, situation, case, rep, desc(feature_weight_abs)) %>%
-  group_by(set, situation, case, rep) %>%
-  slice(2) %>%
-  ungroup() %>%
-  group_by(set, situation, case) %>%
-  summarise(nlevels = length(levels(factor(feature)))) %>%
-  mutate(nlevels = factor(nlevels, levels = c(1:5))) %>%
-  ggplot(aes(x = situation, fill = nlevels)) + 
-  geom_bar(position = "stack") +
-  facet_grid( ~ set) + 
-  theme(legend.position = "bottom", 
-        axis.text.x = element_text(angle = 45, hjust = 1)) + 
-  scale_fill_brewer(palette = "RdYlBu") + 
-  labs(x = "Situation", y = "Count", fill = "Number of Features")
-
-hamby224_sensitivity_results %>%
-  select(set, situation, case, rep, feature, feature_weight) %>%
-  mutate(feature_weight_abs = abs(feature_weight)) %>%
-  arrange(set, situation, case, rep, desc(feature_weight_abs)) %>%
-  group_by(set, situation, case, rep) %>%
-  slice(3) %>%
-  ungroup() %>%
-  group_by(set, situation, case) %>%
-  summarise(nlevels = length(levels(factor(feature)))) %>%
-  mutate(nlevels = factor(nlevels, levels = c(1:5))) %>%
-  ggplot(aes(x = situation, fill = nlevels)) + 
-  geom_bar(position = "stack") +
-  facet_grid( ~ set) + 
-  theme(legend.position = "bottom", 
-        axis.text.x = element_text(angle = 45, hjust = 1)) + 
-  scale_fill_brewer(palette = "RdYlBu") + 
-  labs(x = "Situation", y = "Count", fill = "Number of Features")
+  mutate(explainer = rep(c("first", "second", "third"), length(situation) / 3)) %>%
+  select(-feature_weight, -feature_weight_abs) %>%
+  spread(explainer, feature)
 ```
 
-The plot below needs some work, but it does contain some interesting information. Right now, I am only concentrating on set 1. We can see that with some lime settings, all cases have the same "best" variable chosen, and other settings have multiple important variables that depend on the case. We can also see that different variables are selected as important depending on the number of bins. It is also interesting to note that when comparing the quantile bins to the equally spaced bins, this plot shows that the equally spaced bins tend to choose the same first variable for all cases. On the other hand, the quantile bins choose different first variables for the cases.
+```{r}
+# Determine and plot the number of features chosen across the 10 reps within 
+# a set, input options, and feature level
+sensitivity_chosen %>%
+  group_by(set, situation, case) %>%
+  summarise(first = length(levels(factor(first))),
+            second = length(levels(factor(second))),
+            third = length(levels(factor(third)))) %>%
+  gather(chosen, nfeatures, first:third) %>%
+  ggplot(aes(x = situation, fill = factor(nfeatures))) + 
+  geom_bar(position = "stack") + 
+  facet_grid(set ~ chosen) + 
+  labs(x = "Bin Type", y = "Count", fill = "Number of Features") + 
+  theme_bw() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), legend.position = "bottom") + 
+  scale_fill_gretchenalbrecht(palette = "winter_light", discrete = TRUE)
+```
+
+The plots below need some work, but they contain some interesting information. Right now, I am only concentrating on set 1. We can see that with some lime settings, all cases have the same "best" variable chosen, and other settings have multiple important variables that depend on the case. We can also see that different variables are selected as important depending on the number of bins. It is also interesting to note that when comparing the quantile bins to the equally spaced bins, this plot shows that the equally spaced bins tend to choose the same first variable for all cases. On the other hand, the quantile bins choose different first variables for the cases.
 
 The fact that different features get chosen as the top feature for different estimation techniques makes sense. You would expect that the number of bins would determine which features are better suited for predicting whether or not a comparison is a match. For example, if you look back at the feature distribution plots, you can see that ccf is the obvious choice for determining between matches and non-matches if you have to choose two equally spaced bins. This is the feature that lime most frequently chooses. You can make similar arguments for other cases as well. Even though different inputs select different variables, I would expect that some variables will be better at prediction than others. I think this is what leads some input values to better LIME explanations and lower MSEs than others.
 
 In the meeting with Heike, we talked about how this plot suggests that LIME is not doing a very good job of providing local explanations. Regardless of the case, it is often suggesting only one of two variables are important, and the variable importance depends on the number of bins. In this plot, I would like consistency in the x-direction, but I would like variability in the y-direction to better understand the variables that are important for a specific case.
 
-```{r fig.height = 8, fig.width = 10, eval = FALSE}
-hamby224_sensitivity_results %>%
+```{r fig.height = 8, fig.width = 10}
+hamby224_sensitivity_joined %>%
   filter(set == "Set 1") %>%
   droplevels() %>%
   select(situation, case, rep, feature, feature_weight) %>%
@@ -1123,7 +1106,7 @@ hamby224_sensitivity_results %>%
   mutate(nlevels = length(levels(factor(feature)))) %>%
   ungroup() %>%
   arrange(situation, desc(nlevels), case) %>%
-  mutate(order = rep(rep(1:length(levels(case)), each = 10), 17)) %>%
+  mutate(order = rep(rep(1:length(levels(case)), each = 10), 22)) %>%
   ggplot(aes(x = order, fill = feature)) + 
   geom_bar(position = "stack", width = 1) + 
   coord_flip() + 
@@ -1132,10 +1115,10 @@ hamby224_sensitivity_results %>%
   theme(legend.position = "bottom",
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) + 
-  scale_fill_brewer(palette = "Spectral") + 
+  scale_fill_gretchenalbrecht(palette = "last_rays", discrete = TRUE) +
   labs(x = "cases")
 
-hamby224_sensitivity_results %>%
+hamby224_sensitivity_joined %>%
   filter(set == "Set 1") %>%
   droplevels() %>%
   select(situation, case, rep, feature, feature_weight) %>%
@@ -1148,7 +1131,7 @@ hamby224_sensitivity_results %>%
   mutate(nlevels = length(levels(factor(feature)))) %>%
   ungroup() %>%
   arrange(situation, desc(nlevels), case) %>%
-  mutate(order = rep(rep(1:length(levels(case)), each = 10), 17)) %>%
+  mutate(order = rep(rep(1:length(levels(case)), each = 10), 22)) %>%
   ggplot(aes(x = order, fill = feature)) + 
   geom_bar(position = "stack", width = 1) + 
   coord_flip() + 
@@ -1157,10 +1140,10 @@ hamby224_sensitivity_results %>%
   theme(legend.position = "bottom",
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) + 
-  scale_fill_brewer(palette = "Spectral") + 
+  scale_fill_gretchenalbrecht(palette = "last_rays", discrete = TRUE) +
   labs(x = "cases")
 
-hamby224_sensitivity_results %>%
+hamby224_sensitivity_joined %>%
   filter(set == "Set 1") %>%
   droplevels() %>%
   select(situation, case, rep, feature, feature_weight) %>%
@@ -1173,7 +1156,7 @@ hamby224_sensitivity_results %>%
   mutate(nlevels = length(levels(factor(feature)))) %>%
   ungroup() %>%
   arrange(situation, desc(nlevels), case) %>%
-  mutate(order = rep(rep(1:length(levels(case)), each = 10), 17)) %>%
+  mutate(order = rep(rep(1:length(levels(case)), each = 10), 22)) %>%
   ggplot(aes(x = order, fill = feature)) + 
   geom_bar(position = "stack", width = 1) + 
   coord_flip() + 
@@ -1182,13 +1165,13 @@ hamby224_sensitivity_results %>%
   theme(legend.position = "bottom",
         axis.text.y = element_blank(),
         axis.ticks.y = element_blank()) + 
-  scale_fill_brewer(palette = "Spectral") + 
+  scale_fill_gretchenalbrecht(palette = "last_rays", discrete = TRUE) +
   labs(x = "cases")
 ```
 
 I was thinking a bit more about the relationship between the top features chosen and the type of binning used. I realized it would be helpful to view the relationship between the features and the random forest score. The plots below show the testing data with random forest score versus each of the features. The points are colored by the samesource variable.
 
-```{r eval = FALSE}
+```{r}
 hamby224_test %>% 
   select(rf_features, rfscore, samesource) %>%
   gather(key = feature, value = value, 1:9) %>%
@@ -1200,7 +1183,6 @@ hamby224_test %>%
        title = "Hamby 224 Testing Data") +
   theme_bw() +
   theme(legend.position = "bottom")
-
 ```
 
 ## Input Rankings
@@ -1216,10 +1198,10 @@ While using these to help me decide which input settings to use, I had a handful
 
 Based on the MSEs from the single implementation of LIME, I will use 3 equally spaced bins for both the set 1 and set 11 explanations in the firearm examiner paper since it leads to the lowest MSE for both sets.
 
-```{r eval = FALSE}
+```{r}
 joined_results <- hamby224_lime_results %>%
   select(set, situation, mse, ave_r2) %>%
-  full_join(hamby224_sensitivity_mses %>%
+  full_join(hamby224_sensitivity_results %>%
               group_by(set, situation) %>%
               summarise(mean_sensitivity_mse = mean(mse), 
                         sd_sensitivity_mse = sd(mse)),
@@ -1233,7 +1215,7 @@ joined_results <- hamby224_lime_results %>%
          mean_nlevels_order = dense_rank(mean_nlevels))
 ```
 
-```{r eval = FALSE}
+```{r}
 joined_results %>%
   ungroup() %>%
   filter(set == "Set 1") %>%
@@ -1256,11 +1238,4 @@ joined_results %>%
                              "Mean R2"),
                 caption = "Results from Set 11")
 ```
-
-# Future Ideas to Implement
-
-* Include a penalty for the number of parameters when choosing bins
-* Look at the AUC after binning
-* Compare the simple models based on different number of bins using an F-test
-* Determine the best number of bins to use for each variable
 
