--- a/presentations/jsm/jsm abstract.Rmd
+++ b/presentations/jsm/jsm abstract.Rmd
@@ -13,37 +13,46 @@ Contributed
 
 #### Session Subtype (Paper, Speed, Poster, A.M. or P.M. Roundtable)
 
-Paper, speed, or poster (*Which should I list as the perferred session?*)
+Paper
 
 #### Primary Sponsor (ASA Committee, ASA Section, JSM Sponsoring Society). A pull-down screen with a pre-approved list is provided.
 
-(*I am not sure what to list for this?*)
+- the section on statistical learning and data science 
+- maybe the section on statistical computing
 
 #### Abstract Title
 
 An Assessment of the Application of LIME to Interpret Random Forest Predictions from Bullet Matching Data
 
-(*This seems too long and wordy...*)
-
 #### Abstract Text (1200 character limit)
 
-Random forests are known for their accurate predictive abilities, but they are a part of the family of machine learning models that lack interpretability. Recently, a technique called LIME was developed to provide local interpretations for predictive models. The technique fits a linear regression model to perturbations created from the observed data in a localized region around a prediction of interest and the predicted values associated with the perturbations computed using the complex model. The coefficients from the linear model are used to determine the influential variables. We apply LIME to a random forest fit to a forensics bullet matching dataset using the lime package currently available in R. The LIME algorithm requires several input options that affect the way that the perturbations are created and how the model is interpreted. We assess the current options available in the package and propose some new methods.
-
-(*What are your thoughts about this? Is the focus of this abstract apporpriate for the talk?*)
+Random forests are known for their accurate predictive abilities, but they are a part of the family of machine learning models that lack interpretability. Recently, a technique called LIME was developed to provide local interpretations for predictive models. The technique fits a linear regression model to perturbations created from the observed data in a localized region around a prediction of interest. The predicted values associated with the perturbations computed using the complex model are used as the response variable in the regression. The coefficients from the linear model are used to determine the influential variables. We apply LIME to a random forest fit to a forensics bullet matching dataset using the lime package currently available in R. The LIME algorithm requires several input options that affect the way that the perturbations are created and how the model is interpreted. We assess the current options available in the package and propose some improvements.
 
 #### Abstract Keywords
 
-random forest, LIME, interpretability
-
-(*Are these okay?*)
+random forest, LIME, black box model, interpretability
 
 #### Presenting author and co-author contact information. Please note, there can only be one presenting author. Accurate and unique email addresses are required for all authors.
 
 Presenting author: Katherine Goode <kgoode@iastate.edu>
 
-Co-author: Heike Hoffman <hofmann@iastate.edu>
+Co-author: Heike Hofmann <hofmann@iastate.edu>
 
 #### Note:
 
 - If the abstract can be considered for alternate session subtypes. The program committee will not have space for all paper abstracts received. Acceptance is more likely if the presentation can be made in different session formats.
 - Information on abstract submission from: http://ww2.amstat.org/meetings/jsm/2019/submissions.cfm 
+
+#### Abstract Info
+
+password to edit abstract: limebullet
+
+abstract number: 304552
+
+#### Revisions
+
+You may revise your abstract text, title, and keywords or add coauthors from December 3, 2018, through February 4, 2019, and April 1 through April 18, 2019.
+
+#### Proof of Progress
+
+All presenters must send proof of a paper in progress to the appropriate JSM session chair by May 17, 2019. Proof of a paper in progress can be a draft manuscript, detailed outline, PowerPoint slides, etc. If you do not send the required proof, your paper may be deleted from the program and become ineligible for publication in the JSM Proceedings. This requirement applies to all contributed and topic-contributed speakers and invited sessions with discussants.
