changed more to read.csv and write.csv and finished journal 02 on plotting features

--- a/journals/01-cleaning_training_and_testing_data.Rmd
+++ b/journals/01-cleaning_training_and_testing_data.Rmd
@@ -125,7 +125,7 @@ The cleaned data is saved and used as the training dataset for the rest of this 
 
 ```{r}
 # Save the datasets and response variables as .csv files
-write_csv(hamby173and252_train, "../data/hamby173and252_train.csv")
+write.csv(hamby173and252_train, "../data/hamby173and252_train.csv", row.names = FALSE)
 ```
 
 ### Issue
